<resources>
    <string name="app_name">Мой ЯГТУ</string>
    <string name="app_version">Версия 1.7.0 (dev)</string>

    <!-- Другие -->
    <string name="other_search_results">Результаты поиска</string>
    <string name="other_of">из</string>
    <string name="other_dont_find">Ничего не найдено   🔎️</string>
    <string name="other_new">Новое️</string>
    <string name="other_updateFindTitle">Последние обновления</string>
    <string name="other_updateIsAvailable">Доступно обновление</string>
    <string name="other_doc">Документ</string>
    <string name="other_downloads">Загруженные</string>
    <string name="other_not_downloads">Доступные</string>

    <!-- Bottom Floating Button -->
    <string name="bfb_all_event">Все события</string>
    <string name="bfb_all_job">Все вакансии</string>

    <!-- Time -->
    <string name="time_jan">января</string>
    <string name="time_feb">февраля</string>
    <string name="time_mar">марта</string>
    <string name="time_apr">апреля</string>
    <string name="time_may">мая</string>
    <string name="time_jun">июня</string>
    <string name="time_jul">июля</string>
    <string name="time_aug">августа</string>
    <string name="time_sep">сентября</string>
    <string name="time_oct">октября</string>
    <string name="time_nov">ноября</string>
    <string name="time_dec">декабря</string>
    <string name="time_today">Сегодня</string>
    <string name="time_yesterday">Вчера</string>

    <!-- Названия вкладок нижнего бара -->
    <string name="tab_news_text">Новости</string>
    <string name="tab_bell_text">Обновления</string>
    <string name="tab_menu_text">Меню</string>

    <!-- Названия кнопок в меню -->
    <string name="menu_text_schedule">Расписание</string>
    <string name="menu_text_map">Карта корпусов</string>
    <string name="menu_text_event">События</string>
    <string name="menu_text_job">Вакансии</string>
    <string name="menu_text_users">Сотрудники</string>
    <string name="menu_text_settings">Настройки</string>
    <string name="menu_text_documents">Документы</string>

    <!-- Activity вакансии -->
    <string name="activity_job_title">Вакансии</string>

    <!-- Activity события -->
    <string name="activity_event_title">События</string>
    <string name="activity_eventFull_locationTitle">Адрес</string>
    <string name="activity_eventFull_dateTitle">Когда</string>
    <string name="activity_eventFull_sitebar_title">Доп. информация</string>

    <!-- Activity карты -->
    <string name="activity_map_title">Карта корпусов</string>

    <!-- Activity photoView -->
    <string name="photo_view_image_successfully_save">Изображение сохранено</string>
    <string name="photo_view_image_title">Изображение</string>

    <!-- Activity профиль -->
    <string name="activity_userFull_title">Профиль</string>

    <!-- Activity расписание -->
    <string name="tab_schedule_one">Очное</string>
    <string name="tab_schedule_two">Заочное</string>
    <string name="schedule_file_not_open">Нет приложения для открытия документа</string>
    <string name="intent_schedule_share_doc">Отправить документ</string>
    <string name="schedule_item_asf_one">Институт инженеров\nстроительства\nи транспорта</string>
    <string name="schedule_item_asf_two">Институт\nархитектуры\nи дизайна</string>
    <string name="schedule_item_ief">Инженерно-\nэкономический\nфакультет</string>
    <string name="schedule_item_af">Автомеханический\nфакультет</string>
    <string name="schedule_item_mf">Машиностроительный\nфакультет</string>
    <string name="schedule_item_htf">Химико\nтехнологический\nфакультет</string>
    <string name="schedule_item_zf">Заочный\nфакультет</string>
    <string name="schedule_item_ozf">ОУОП заочный\nфакультет</string>

    <!-- BellFragment -->
    <string name="bell_title_one">Первое учебное полугодие</string>
    <string name="bell_title_two">Второе учебное полугодие</string>
    <string name="bell_title_three">Летние каникулы</string>
    <string name="bell_title_session_one">Зимняя сессия</string>
    <string name="bell_title_session_two">Летняя сессия</string>
    <string name="bell_text_week">неделя</string>
    <string name="bell_text_lesson">пара</string>
    <string name="bell_text_time">звонок</string>
    <string name="bell_break_one">П</string>
    <string name="bell_break_two">БП</string>
    <string name="bell_day_off">ВЫХ</string>
    <string name="bell_item_title_schedule">Обновление в расписании</string>
    <string name="bell_placeholder_text">Обновлений нет 😴</string>

    <string name="bell_update_event_text">Обновлен раздел с событиями</string>
    <string name="bell_update_job_text">Добавлены новые вакансии</string>

    <!-- NewsFragment -->
    <string name="news_bottomsheetmenu_title">Запись на стене</string>

    <!-- ErrorMessage -->
    <string name="error_message_title">Что-то пошло не так…</string>
    <string name="error_message_refresh">Обновить</string>
    <string name="error_message_internet_error">Отсутствует подключение к интернету</string>
    <string name="error_message_file_not_found">Файл не найден</string>
    <string name="error_message_schedule_change_not_found">Изменения не найдены</string>
    <string name="error_message_schedule_network_download_error">Ошибка скачивания документа</string>
    <string name="error_message_schedule_dir_create_error">Ошибка создания директории</string>
    <string name="error_message_event_not_found">События не найдены</string>
    <string name="error_message_job_not_found">Вакансии не найдены</string>
    <string name="error_message_news_not_found_post">Записи не найдены</string>
    <string name="error_message_sto_not_found_post">Стандарты не найдены</string>
    <string name="error_message_schedule_not_update">Не удалось проверить обновление</string>

    <!-- Menu -->
    <string name="menu_openOriginal">Открыть оригинал</string>
    <string name="menu_openInBrowser">Открыть в браузере</string>
    <string name="menu_share">Поделиться</string>
    <string name="menu_shareLink">Поделиться ссылкой</string>
    <string name="menu_shareFile">Поделиться файлом</string>
    <string name="menu_download">Скачать</string>
    <string name="menu_update">Обновить</string>
    <string name="menu_delete">Удалить</string>
    <string name="menu_change">Изменения</string>
    <string name="menu_detail">Подробнее</string>
    <string name="menu_copyLink">Скопировать ссылку</string>
    <string name="menu_copyText">Скопировать текст</string>
    <string name="menu_openAuthor">Открыть автора</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_open">Открыть</string>

    <string name="menu_url_titles_sto">Стандарты оформления работ</string>
    <string name="menu_url_titles_doc">Полезные документы</string>

    <!-- Toast -->
    <string name="toast_isCopyLink">Ссылка скопирована</string>
    <string name="toast_isCopyText">Текст скопирован</string>
    <string name="toast_errorDeleteFile">Не удалось удалить файл</string>
    <string name="toast_reloadApp">Требуется перезапуск приложения</string>
    <string name="toast_no_connection_the_internet">Для обновления данных подключитесь к интернету</string>
    <string name="toast_dont_text">Текст не найден</string>
    <string name="toast_permission_ok">Разрешение успешно получено, повторите действие</string>

    <!-- Settings -->
    <string name="settings_category_general">Основные</string>
    <string name="settings_category_additional">Дополнительные</string>
    <string name="settings_category_other">Другое</string>

    <string name="settings_general_ui">Интерфейс</string>
    <string name="settings_general_ui_animation">Анимации приложения</string>
    <string name="settings_general_ui_darktheme">Тёмная тема</string>
    <string name="settings_general_ui_darktheme_summary">Тёмная тема включена в настройках устройства</string>
    <string name="settings_general_photoSize">Размер загружаемых фото</string>

    <string name="settings_category_additional_cache">Данные</string>
    <string name="settings_category_additional_cache_delete_photo">Удалить кэш фото</string>
    <string name="settings_category_additional_cache_delete_schedule">Удалить файлы расписания</string>
    <string name="settings_category_additional_cache_delete_app">Удалить кэш данных</string>
    <string name="settings_category_additional_cache_summary">Занято:</string>

    <string name="settings_category_additional_experimental">Экспериментальные</string>
    <string name="settings_category_additional_experimental_cache_ram_title">Кэшировать изображения в ОЗУ</string>
    <string name="settings_category_additional_experimental_cache_ram_summary">Рекомендуется использовать при 3гб ОЗУ или больше</string>
    <string name="settings_category_additional_experimental_image_enable">Не загружать изображения</string>
    <string name="settings_category_additional_experimental_image_enable_summary">Сильно снижает использование трафика</string>

    <string name="settings_category_other_about_university">О ВУЗе</string>
    <string name="settings_category_other_about">О программе</string>
    <string name="settings_category_other_library_about">Лицензии открытого ПО</string>

    <!-- О ВУЗе -->
    <string name="about_university_title">Об университете</string>
    <string name="about_university_subtitle">Миссия университета: ЯГТУ – центр притяжения талантливой молодежи и развития высококвалифицированных кадров, формирующих новый технологический уклад Ярославской области и Российской Федерации.\n\nВ ЯГТУ получают высшее образование почти 5000 студентов, обучающихся по 60 профилям, программам и специализациям.</string>
    <string name="about_university_text">В 2019 году идет прием на почти 1000 бюджетных мест и на 300 мест обучения на платной основе.\nВ университете работает 5 факультетов и 3 института.\nЧетыре направления  подготовки ЯГТУ вошли в ТОП-20 направлений в России рейтинга по качеству приема (средний балл ЕГЭ, НИУ «ВШЭ»).\n\nЯГТУ реализует программы сотрудничества с Правительством Ярославской области и крупнейшими предприятиями региона. Университет - участник соглашения по созданию Ассоциации инновационно-технологического развития Ярославской области, в котором помимо ЯГТУ приняли участие Правительство региона и ряд вузов.\nВ 2018 году заключены 17 соглашений о сотрудничестве с партнерами по инновационной деятельности и потенциальными работодателями, начала работу «биржа проектов».\n90% выпускников ЯГТУ успешно трудоустраиваются. Многие находят работу уже во время учебы.\n\nСтуденты ЯГТУ ведут активную жизнь вне аудиторий. В вузе работают Союз студентов и Профком студентов.\nПроводятся спортивные, творческие, научные и общественные мероприятия.\nСтуденты вуза участвуют и побеждают в конкурсах и фестивалях регионального, федерального и международного уровня. В 2018 году студентки вуза Анастасия Камнева и Юлиана Муравьева стали лучшими (1 и 3 место) в Европе (г. Будапешт) на соревнованиях по профессиональному мастерству EuroSkills 2018 в категории «Лабораторный химический анализ».\n\nКампус ЯГТУ  - один из крупнейших в регионе и включает 8 учебных корпусов, 4 общежития, спортивный корпус, столовую, стадион, автодром.\n100% иногородних студентов обеспечены общежитиями.\nВсе учебные корпуса, общежития, спортивный корпус, столовая и стадион расположены компактно и образуют единое комфортное пространство студенческого городка.</string>


</resources>
