<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/settings_category_general">

        <PreferenceScreen
            android:icon="@drawable/ic_ui"
            android:key="preference_general_ui"
            android:title="@string/settings_general_ui">

            <SwitchPreference
                android:defaultValue="true"
                android:key="preference_ui_animation_enable"
                android:title="@string/settings_general_ui_animation"
                app:iconSpaceReserved="false" />
        </PreferenceScreen>

        <ListPreference
            android:defaultValue="mid"
            android:entries="@array/photoSize_Array"
            android:entryValues="@array/photoSize_Values"
            android:icon="@drawable/ic_photo_size"
            android:key="preference_general_photoSize"
            android:summary="Среднее"
            android:title="@string/settings_general_photoSize" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_additional">
        
        <PreferenceScreen
            android:icon="@drawable/ic_cache"
            android:key="preference_additional_cache"
            android:title="@string/settings_category_additional_cache">

            <Preference
                android:key="preference_cache_photo"
                android:summary="@string/settings_category_additional_cache_summary"
                android:title="@string/settings_category_additional_cache_delete_photo"
                app:iconSpaceReserved="false" />

            <Preference
                android:key="preference_cache_app"
                android:summary="@string/settings_category_additional_cache_summary"
                android:title="@string/settings_category_additional_cache_delete_app"
                app:iconSpaceReserved="false" />

            <Preference
                android:key="preference_cache_schedule"
                android:summary="@string/settings_category_additional_cache_summary"
                android:title="@string/settings_category_additional_cache_delete_schedule"
                app:iconSpaceReserved="false" />

        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_other">

        <Preference
            android:icon="@drawable/ic_about"
            android:key="preference_other_about"
            android:title="@string/settings_category_other_about" />

    </PreferenceCategory>
</PreferenceScreen>