<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_news_item_shareLink"
        android:icon="@drawable/ic_share"
        android:title="@string/menu_shareLink" />
    <item
        android:id="@+id/menu_news_item_openOriginal"
        android:icon="@drawable/ic_browser"
        android:title="@string/menu_openOriginal" />

    <group android:id="@+id/menu_news_group_copy">
        <item
            android:id="@+id/menu_news_item_copyLink"
            android:icon="@drawable/ic_copy"
            android:title="@string/menu_copyLink" />
        <item
            android:id="@+id/menu_news_item_copyText"
            android:icon="@drawable/ic_copy"
            android:title="@string/menu_copyText" />
    </group>

    <item
        android:id="@+id/menu_news_item_openAuthor"
        android:icon="@drawable/ic_user"
        android:title="@string/menu_openAuthor" />
</menu>