<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_schedule_item_download"
        android:icon="@drawable/ic_download"
        android:title="@string/menu_download" />
    <item
        android:id="@+id/menu_schedule_item_openInBrowser"
        android:icon="@drawable/ic_browser"
        android:title="@string/menu_openInBrowser" />
    <group android:id="@+id/menu_group_schedule_item_share">
        <item
            android:id="@+id/menu_schedule_item_shareFile"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_shareFile" />
        <item
            android:id="@+id/menu_schedule_item_shareLink"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_shareLink" />
    </group>
</menu>