<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ErrorMessageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.ContentFrameLayout
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_gravity="center">

            <androidx.appcompat.widget.ContentFrameLayout
                android:id="@+id/error_message_icon_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.05"
                android:background="@drawable/shape_circle"
                android:backgroundTint="@color/colorPrimaryLight" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/error_message_icon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                tools:srcCompat="@drawable/ic_connect_error" />

        </androidx.appcompat.widget.ContentFrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/error_message_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/colorTextBlack"
            android:ellipsize="end"
            android:gravity="center"
            android:alpha="0.5"
            android:maxLines="1"
            android:text="@string/error_message_title"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/error_message_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:textSize="16sp"
            android:textColor="@color/colorTextBlack"
            android:gravity="center"
            android:maxLines="5"
            tools:text="@string/error_message_internet_error" />

        <androidx.appcompat.widget.ContentFrameLayout
            android:id="@+id/error_message_refresh_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/shape_rectangle_rounded_15dp"
                android:backgroundTint="@color/colorButtonBackgroundError"
                android:elevation="4dp"
                android:paddingStart="32dp"
                android:paddingTop="6dp"
                android:paddingEnd="32dp"
                android:paddingBottom="6dp"
                android:text="@string/error_message_refresh"
                android:textColor="@color/colorButtonTextError"
                android:textSize="16sp"
                android:textStyle="bold"
                app:textAllCaps="true" />
        </androidx.appcompat.widget.ContentFrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>